# EECS149-Project

./: FT_calibration.ipynb  README.md
ESP32_WIFI/: platformio.ini
ESP32_WIFI/src/: helper.cpp  main.cpp  workspace.code-workspace
ESP32_WIFI/src/F/: COMMAND   T_ROS.cpp  change
LFC Porting/STM32_REF/Core/Inc/: main.h
LFC Porting/lf_platformtest/include/Main/: Main.h
LFC Porting/lf_platformtest/src/: Main.lf
LFC Porting/lf_platformtest/src-gen/Main/: CMakeLists.txt  Main.c  _main_main.c  _main_main.h
LFC_Porting/.metadata/: version.ini
LFC_Porting/.metadata/.plugins/de.cau.cs.kieler.klighd.ui.view/: dialog_settings.xml
LFC_Porting/.metadata/.plugins/org.eclipse.core.resources/.projects/lfc_testbench/: .markers
LFC_Porting/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
LFC_Porting/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
LFC_Porting/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
LFC_Porting/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
LFC_Porting/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
LFC_Porting/.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
LFC_Porting/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
LFC_Porting/.metadata/.plugins/org.eclipse.xtext.builder/: builder.state
LFC_Porting/STM32_REF/: .mxproject  CMakeLists.txt  Makefile
LFC_Porting/STM32_REF/C_build/: CMakeCache.txt
LFC_Porting/STM32_REF/Core/Src/: main.c
LFC_Porting/STM32_REF_2/: CMakeLists.txt  Makefile
LFC_Porting/STM32_REF_2/Drivers/STM32F4xx_HAL_Driver/: stm32f4xx.h
LFC_Porting/STM32_REF_2/STM32_SDK/: CMakeLists.txt
LFC_Porting/lfc_REF/: log.txt
LFC_Porting/lfc_REF/include/Main/: Main.h
LFC_Porting/lfc_REF/src/: Main.lf
LFC_Porting/lfc_REF/src-gen/Main/: CMakeLists.txt  Main.c  _main_main.c  _main_main.h
LFC_Porting/lfc_REF/src-gen/Main/core/platform/: lf_STM32f4_support.c
LFC_Porting/lfc_REF/src-gen/Main/include/Main/: Main.h
LFC_Porting/lfc_STM/: Makefile
LFC_Porting/lfc_STM/include/Main/: Main.h
LFC_Porting/lfc_STM/src/: Main.lf
LFC_Porting/lfc_STM/src-gen/Main/: CMakeLists.txt  Main.c  Makefile  _main_main.c  _main_main.h
LFC_Porting/lfc_STM/src-gen/Main/core/: CMakeLists.txt
LFC_Porting/lfc_STM/src-gen/Main/core/platform/: lf_STM32f4_support.c
LFC_Porting/lfc_testbench/: .project  Main.ioc  Makefile
LFC_Porting/lfc_testbench/STM_build/: CMakeCache.txt  Main.elf  Main.hex  Main.map  Makefile  cmake_install.cmake  compile_commands.json
LFC_Porting/lfc_testbench/STM_build/Main/core/: Makefile
LFC_Porting/lfc_testbench/STM_build/core/: Makefile  cmake_install.cmake
LFC_Porting/lfc_testbench/include/Main/: Main.h
LFC_Porting/lfc_testbench/src/: Main.lf
LFC_Porting/lfc_testbench/src-gen/: CMakeLists.txt  Makefile  log.txt
LFC_Porting/lfc_testbench/src-gen/Core/Src/: STM_main.c
LFC_Porting/lfc_testbench/src-gen/Main/: CMakeLists.txt  Main.c  Makefile  _main_main.c  _main_main.h
LFC_Porting/lfc_testbench/src-gen/Main/core/: CMakeLists.txt  Makefile  cmake_install.cmake  environment.c  reactor.c
LFC_Porting/lfc_testbench/src-gen/Main/core/platform/: CMakeLists.txt  Platform.cmake  lf_STM32f4_support.c
LFC_Porting/lfc_testbench/src-gen/Main/include/Main/: Main.h
LFC_Porting/lfc_testbench/src-gen/Main/include/core/: platform.h
LFC_Porting/lfc_testbench/src-gen/Main/include/core/platform/: lf_STM32f4_support.h
Motor_Testbench/: f_data30.out  f_data_20.out  notes.txt  platformio.ini  screenlog.0  screenlog.1
Motor_Testbench/Data/: data-1500kbps.txt  data-timing.xlsx  data.txt  data=20Hz.txt
Motor_Testbench/Doc/: sw-block-diag.pptx
Motor_Testbench/lib/stm32_std/: control_thread.c  dac.c  heartbeat.c  pwm.c  read_adc.c  read_hx711.c  read_qdec.c  read_serial.c  read_state.c  stm32_std.h  thread_info.c  timing.c  uart_getline.c  uart_printq.c  userled.c
Motor_Testbench/python/: control-record.py  test-serial.py
Motor_Testbench/src/: encoder.c  encoder.h  main.c  motor.c  motor.h  pid.c  pid.h  test.c  test.h
Motor_Testbench/zephyr/: CMakeLists.txt  nucleo_f446re.overlay  prj.conf  sample.yaml
STM_sdk/Core/Src/: STM_main.c
data_collection/: ZOS_2000_100.txt  ZOS_2000_200.txt  ZOS_4000_100.txt  ZOS_4000_200.txt  lfc_2000_100_1.txt  lfc_2000_100_10.txt  lfc_2000_100_5.txt  lfc_2000_200_1.txt  lfc_2000_200_10.txt  lfc_2000_200_5.txt  lfc_4000_100_1.txt  lfc_4000_100_10.txt  lfc_4000_100_5.txt  lfc_4000_200_1.txt  lfc_4000_200_10.txt  lfc_4000_200_5.txt
lfc_controller/STM_sdk/Core/Inc/: stm32f4xx_hal_conf.h
lfc_controller/STM_sdk/Core/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
lfc_controller/STM_sdk/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_adc.h  stm32f4xx_hal_adc_ex.h
lfc_controller/include/Main/: Main.h
lfc_controller/include/PID/: PID_Controller.h
lfc_controller/include/Serial/: Serial.h
lfc_controller/src/: Main.lf
lfc_controller/src-gen/Main/: CMakeLists.txt  Main.c  _dac.c  _dac.h  _main_main.c  _main_main.h  _pid_controller.c  _pid_controller.h  _qdec.h  _serial.c  _serial.h  _testreactor.c
lfc_controller/src-gen/Main/include/DAC/: DAC.h
lfc_controller/src-gen/Main/include/Encoder/: QDEC.h
lfc_controller/src-gen/Main/include/Main/: Main.h  Serial.h
lfc_controller/src-gen/Main/include/Serial/: Serial.h
lfc_controller/src/lib/: DAC.lf  Encoder.lf  PID.lf  Serial.lf
lfc_skeleton/: Makefile
lfc_skeleton/STM_sdk/Core/Inc/: stm32f4xx_hal_conf.h
lfc_skeleton/STM_sdk/Core/Src/: stm32_startup.c  stm32f4xx_it.c
lfc_skeleton/src/: Main.lf
lfc_skeleton/src-gen/Main/: Main.c  _dac.c  _main_main.c  _main_main.h  _pid_controller.c  _qdec.c  _serial.c  _testreactor.h
lfc_skeleton/src-gen/Main/include/DAC/: DAC.h
lfc_skeleton/src-gen/Main/include/Main/: Main.h  TestReactor.h
lfc_skeleton/src-gen/Main/include/PID/: PID_Controller.h
lfc_skeleton/src/lib/: DAC.lf  PID.lf
lib_ref/: .mxproject  Makefile  lib_ref.ioc
lib_ref/Core/Inc/: stm32f4xx_hal_conf.h
lib_ref/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
(+2 files in other folders)
